--- a/general.html
+++ b/general.html
@@ -9,6 +9,18 @@
 </head>
 <body>
   
+    <header>
+    <nav class="navbar">
+      <div class="logo">📊 Datos Abiertos</div>
+      <button class="menu-toggle">☰</button>
+      <ul class="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="general.html">Estadísticas Generales</a></li>
+        <li><a href="detalles.html">Análisis Detallado</a></li>
+        <li><a href="conclusiones.html">Conclusiones</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <h1>Nacimientos en Pereira 2020 a 2024</h1>
 
