--- a/conclusiones.html
+++ b/conclusiones.html
@@ -8,17 +8,19 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
+    <nav id="primary-navigation" class="navbar">
       <div class="logo">📊 Datos Abiertos</div>
-      <button class="menu-toggle">☰</button>
-      <ul class="menu">
+      <button id="menuToggle" class="menu-toggle" aria-expanded="false" aria-label="Abrir menú">☰</button>
+      <ul id="navLinks" class="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="general.html">Estadísticas Generales</a></li>
         <li><a href="detalles.html">Análisis Detallado</a></li>
-        <li><a href="conclusiones.html" class="active">Conclusiones</a></li>
+        <li><a href="conclusiones.html">Conclusiones</a></li>
       </ul>
     </nav>
   </header>
+
+  <script src="script.js"></script>
 
   <main>
     <h1>Conclusiones sobre los nacimientos en Pereira (2020 - 2024)</h1>
@@ -31,29 +33,24 @@
     d3.dsv(";", "nacimientos_pereira2020_1.csv").then(data => {
       let total = data.length;
 
-      // Normalizar claves
       data.forEach(d => {
         d.Sexo = (d["Sexo"] || "").trim().toUpperCase();
         d.Regimen = (d["Regimen Salud"] || "").trim().toUpperCase();
         d.Zona = (d["Zona (U=urbana; R=rural)"] || "").trim().toUpperCase();
       });
 
-      // Conteo por sexo
       let conteoSexo = d3.rollup(data, v => v.length, d => d.Sexo);
       let masculino = conteoSexo.get("MASCULINO") || 0;
       let femenino = conteoSexo.get("FEMENINO") || 0;
       let porcentajeM = ((masculino / total) * 100).toFixed(1);
       let porcentajeF = ((femenino / total) * 100).toFixed(1);
 
-      // Régimen predominante
       let conteoRegimen = d3.rollup(data, v => v.length, d => d.Regimen);
       let regimenTop = Array.from(conteoRegimen.entries()).sort((a, b) => b[1] - a[1])[0];
 
-      // Zona predominante
       let conteoZona = d3.rollup(data, v => v.length, d => d.Zona);
       let zonaTop = Array.from(conteoZona.entries()).sort((a, b) => b[1] - a[1])[0];
 
-      // Resumen automático
       let resumenHTML = `
         <p><strong>Total de nacimientos registrados:</strong> ${total}</p>
         <p><strong>Distribución por sexo:</strong> Masculino ${porcentajeM}% (${masculino}), 
@@ -63,7 +60,6 @@
       `;
       document.getElementById("resumen").innerHTML = resumenHTML;
 
-      // Conclusión final (texto interpretativo)
       let conclusionHTML = `
         <h2>Conclusión general</h2>
         <p>Los datos muestran que la mayoría de los nacimientos en Pereira entre 2020 y 2024 
