--- a/detalles.html
+++ b/detalles.html
@@ -9,11 +9,11 @@
 
 </head>
 <body>
-    <header>
-    <nav class="navbar">
+  <header>
+    <nav id="primary-navigation" class="navbar">
       <div class="logo">📊 Datos Abiertos</div>
-      <button class="menu-toggle">☰</button>
-      <ul class="menu">
+      <button id="menuToggle" class="menu-toggle" aria-expanded="false" aria-label="Abrir menú">☰</button>
+      <ul id="navLinks" class="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="general.html">Estadísticas Generales</a></li>
         <li><a href="detalles.html">Análisis Detallado</a></li>
@@ -21,6 +21,9 @@
       </ul>
     </nav>
   </header>
+
+  <script src="script.js"></script>
+
 
   <h1>Detalles de los nacimientos en Pereira 2020 - 2024</h1>
 
@@ -49,11 +52,9 @@
     const ctx = document.getElementById('graficoChart').getContext('2d');
     let chart;
 
-    // Referencias de explicación
     const explicacionTitulo = document.getElementById("explicacionTitulo");
     const explicacionTexto = document.getElementById("explicacionTexto");
 
-    // Diccionario de explicaciones
     const explicaciones = {
       edad: {
         titulo: "Distribución por edad de la madre",
@@ -80,12 +81,10 @@
 
       const datosValidos = data.filter(d => !isNaN(d.EDAD) && d.SEXO && d.REGIMEN_SALUD);
 
-      // Datos edad
       let conteoEdad = d3.rollup(datosValidos, v => v.length, d => d.EDAD);
       let labelsEdad = Array.from(conteoEdad.keys()).sort((a,b)=>a-b);
       let valoresEdad = labelsEdad.map(e => conteoEdad.get(e));
 
-      // Datos sexo-regimen
       let regimenes = Array.from(new Set(datosValidos.map(d => d.REGIMEN_SALUD)));
       let sexos = Array.from(new Set(datosValidos.map(d => d.SEXO)));
 
@@ -95,7 +94,6 @@
         backgroundColor: i===0?'#36A2EB':'#FF6384'
       }));
 
-      // Crear gráfico
       function crearGrafico(tipo) {
         let config;
         if(tipo === 'edad') {
@@ -135,7 +133,6 @@
         chart = new Chart(ctx, config);
       }
 
-      // Inicializar por defecto
       crearGrafico(graficoSelect.value);
       actualizarExplicacion(graficoSelect.value);
 
